Dynamic-access coverage for com.sun.mail.util.SocketFetcher (33/46)